Reorganize code, so everything in src, only plugin_loaded in top-level load.py module

--- a/pyrightconfig-ci.json
+++ b/pyrightconfig-ci.json
@@ -13,6 +13,7 @@
   "reportUntypedClassDecorator": "none",
   "reportUntypedFunctionDecorator": "none",
   "reportUntypedNamedTuple": "none",
+  "reportUnusedImport": "none",
   "reportUnusedVariable": "none",
   "reportUnnecessaryTypeIgnoreComment": "error",
   "reportIncompatibleVariableOverride": "none",
