tree_sitter_select_cousins command and get_cousins function; improve deps install logic

--- a/pyrightconfig-ci.json
+++ b/pyrightconfig-ci.json
@@ -17,5 +17,6 @@
   "reportUnusedVariable": "none",
   "reportUnnecessaryTypeIgnoreComment": "error",
   "reportIncompatibleVariableOverride": "none",
-  "reportIncompatibleMethodOverride": "none"
+  "reportIncompatibleMethodOverride": "none",
+  "reportImportCycles": "error"
 }
